styles/style.css
body {
  height: 100%;

  background-color: rgb(30, 30, 30);

  color: white;
}

.header-moreInfoOpened {
  padding-bottom: 2.5em;
}

header {
  margin-top: 5em;
  text-align: center;
  padding-bottom: 0.5em;
}

h1 {
  font-size: 1.875rem;
  font-family: "Montserrat", serif;
  font-weight: 400;
}

h2 {
  font-size: 1.25rem;
  font-family: "Montserrat", serif;
  font-weight: 400;
}

.modLink,
.inheritParent,
span {
  opacity: inherit;
  font-size: inherit;
  font-family: inherit;
  font-style: inherit;
  font-weight: inherit;
}

.blocked {
  background-color: #9f1e1e;
}

.filterNSFW {
  color: red;
}

.blocked:hover {
  cursor: default;
  background-color: #8b0000;
}

.inProgress {
  background-color: gray;
}

.inProgress:hover {
  cursor: default;
  background-color: #606060;
}

a {
  text-decoration: none;
  color: #5eb3ff;
  transition: 0.5s;
}

a:hover {
  color: #8fcdff;
}

.levelRedirect {
  font-size: inherit;
  text-decoration: none;
  color: white;
  transition: 0.7s;
}

.levelRedirect:hover {
  color: #fa5f55;
}

p,
button,
label,
a {
  font-family: "Ubuntu", serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1rem;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.connect {
  margin-bottom: 0.5em;
}

.header {
  width: 90%;
}

.header-outer {
  display: flex;
  justify-content: center;
  align-items: center;

  text-align: center;

  width: 100%;

  word-wrap: break-word;
  overflow-wrap: break-word;
}

.infoControls {
  margin-top: 0.5em;
}

#lobbies {
  margin-top: 0.25em;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap: 2em;
}

#refresh {
  color: #a8a8a8;
  font-size: 0.75rem;
  margin-top: 0.25rem;
}

#refreshButton {
  min-width: 7em;
}

#uptime {
  color: #a8a8a8;
  font-size: 0.75rem;
  margin-bottom: 0;
}

#notFound {
  text-align: center;
}

#searchOptions-outer {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;

  width: 100%;
}

#searchOptions {
  width: 100%;
}

#searchTitle {
  margin-top: 0;
  padding: 0;
  margin-bottom: 0.35em;
}

.lobbyName {
  margin-top: 0.75em;
  font-size: 1.125rem;
  margin-bottom: 0;
}

.lobbyHostName {
  margin-top: 0.25em;
  margin-bottom: 0.65em;
  font-size: 0.813rem;
}

.levelTitle {
  margin-top: 0;
  margin-bottom: 0.65em;
}

.gamemodeTitle {
  margin-top: 0;
  margin-bottom: 0.75em;
}

.lobbyPlayerCount {
  margin-top: 0;
  margin-bottom: 0.55em;
}

#javascriptRequired {
  color: red;
  text-align: center;
}

/* Code from https://getcssscan.com/css-checkboxes-examples */

.checkbox-wrapper {
  margin-bottom: 0.1em;
}

.checkbox-wrapper input {
  display: inline-block;
  appearance: none;
  background-color: #dfe1e4;
  border-radius: 72px;
  border-style: none;
  flex-shrink: 0;
  height: 20px;
  margin: 0;
  position: relative;
  width: 30px;
}

label {
  display: inline-block;
}

.checkbox-wrapper input::before {
  bottom: -6px;
  content: "";
  left: -6px;
  position: absolute;
  right: -6px;
  top: -6px;
}

.checkbox-wrapper input,
.checkbox-wrapper input::after {
  transition: all 100ms ease-out;
}

.checkbox-wrapper input::after {
  background-color: #fff;
  border-radius: 50%;
  content: "";
  height: 14px;
  left: 3px;
  position: absolute;
  top: 3px;
  width: 14px;
}

.checkbox-wrapper input[type="checkbox"] {
  cursor: default;
}

.checkbox-wrapper input:hover {
  background-color: #c9cbcd;
  transition-duration: 0s;
}

.checkbox-wrapper input:checked {
  background-color: #6e79d6;
}

.checkbox-wrapper input:checked::after {
  background-color: #fff;
  left: 13px;
}

.checkbox-wrapper :focus:not(.focus-visible) {
  outline: 0;
}

.checkbox-wrapper input:checked:hover {
  background-color: #535db3;
}

/* End of code from https://getcssscan.com/css-checkboxes-examples */

/* Discord rich element */

.discord {
  width: 95%;
  display: flex;
  background-color: rgb(30, 30, 30);
  box-shadow: 10px 5px 5px rgb(10, 10, 10);
  color: white;
  align-items: center;
  height: 3.5em;
  border-radius: 5px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.serverIcon {
  aspect-ratio: 1;
  border-radius: 50%;
  margin: 0;
  padding: 0;
  width: 10%;
  margin-left: 2%;
}

.serverName,
.memberCount,
.serverIcon {
  display: inline-block;
  font-size: 1rem;
  padding-right: 2%;
  white-space: nowrap;
}

.plrCount {
  display: inline-block;
  margin-left: 0.1em;
  margin-bottom: 0.25em;
  font-size: 1.125rem;
}

.fullLobby {
  color: red;
}

.availableLobby {
  color: chartreuse;
}

.serverName {
  width: 50%;
  text-overflow: ellipsis;
  overflow: hidden;
}

.discordJoin {
  flex-grow: 1;
  text-align: center;
}

.memberCount {
  width: 14%;
  text-overflow: ellipsis;
  overflow: hidden;
  display: flex;
  align-items: center;
  gap: 0.25em;
}

.memberCount > img {
  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%)
    contrast(103%);
  height: 1em;
  flex-shrink: 0;
}

/* End of Discord Rich Element */

.headerText {
  margin-top: 0.25em;
  margin-bottom: 0.25em;
}

.error {
  color: #f4320b;
  font-size: 0.938rem;
  text-align: center;
}

.closeInfo {
  text-decoration: none;
  color: white;
  transition: 0.7s;
  text-align: center;
  margin-top: 0;
}

.closeInfo:hover {
  color: #fa5f55;
}

.lobby {
  background-color: rgb(20, 20, 20);
  box-shadow: 10px 5px 5px rgb(10, 10, 10);
  text-align: center;
  padding-bottom: 1em;
  border-radius: 15px;

  width: 14em;

  word-wrap: break-word;
  overflow-wrap: break-word;
  overflow: hidden;

  transition: 0.75s;
}

phantom-ui[filteredout="true"] > .lobby {
  display: none;
  visibility: hidden;
}

.lobbySkeleton {
  box-shadow: 10px 5px 5px rgb(10, 10, 10);
}

#moreDetails-outer {
  display: flex;
  flex-shrink: 0;
  flex-grow: 0;
  justify-content: center;
  align-items: center;
}

#moreDetails {
  background-color: rgb(20, 20, 20);
  box-shadow: 10px 5px 5px rgb(10, 10, 10);
  border-radius: 10px;

  width: 54em;
  margin-bottom: 3em;
}

#searchOptions > li {
  padding: 0;
  text-align: center;
}

.lobbyToCopy,
.playerToCopy,
.discordToCopy,
.hidden {
  display: none;
  visibility: hidden;
}

.lobby:hover {
  box-shadow: 10px 10px 10px rgb(10, 10, 10);
}

.lobbyTitle {
  font-size: 1.563rem;
  text-align: center;

  padding-bottom: 0;
  margin-bottom: 0;
}

.playersTitle {
  display: inline-block;
  font-size: 1.125rem;
  text-align: left;
  margin-left: 1em;
  margin-bottom: 0.25em;
}

.lobbyHost {
  color: rgb(100, 100, 100);
  font-size: 0.781rem;

  text-align: left;
  margin-left: 1.5em;
  margin-top: 0;
}

.players {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  margin-bottom: 1em;
  gap: 1.5em;
  padding-left: 0.5em;
  padding-right: 0.5em;
}

#lobbyLimit {
  text-align: center;
  color: red;
}

.detail {
  font-size: 0.938rem;
  font-weight: 500;
  margin-bottom: 0.5em;
}

.detail-info {
  font-size: 0.781rem;
  width: 95%;
  padding-top: 0;
  margin-top: 0;
  word-wrap: break-word;
}

.lobbyName {
  text-align: center;
  word-wrap: break-word;
  overflow-wrap: break-word;
}

.lobbyInfo {
  margin-top: 0.15em;
  margin-bottom: 0.75em;
  text-align: center;
}

#lobbyLimit {
  margin-top: 0;
  padding-top: 0;
}

.playerCount {
  color: cyan;
}

.lobbyCount {
  color: yellow;
}

.lobbyHeader {
  margin-bottom: 0;
  padding-bottom: 0;
}

.side {
  padding: 1em 0 1em 0;
}

@media (min-width: 600px) {
  .content {
    display: flex;
  }

  .side {
    width: 50%;
  }
}

.left-content,
.right-content {
  flex: 1;
}

@media (max-width: 600px) {
  .right-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
  }

  .side {
    width: 100%;
  }
}

.thumbnail {
  aspect-ratio: 16 / 9;
  border-radius: 10px;
  max-width: 95%;
  margin: auto;
  display: block;
}

@media (min-width: 600px) {
  .thumbnail {
    width: 100%;
  }
}

.avatarThumbnail,
.lobbyThumbnail {
  aspect-ratio: 16 / 9;
  border-radius: 15px 15px 0 0;
  width: 100%;
}

.player {
  background-color: rgb(10, 10, 10);
  box-shadow: 10px 5px 5px rgb(5, 5, 5);
  width: 9em;
  text-align: center;
  border-radius: 15px;

  word-wrap: break-word;
  overflow-wrap: break-word;

  overflow: hidden;

  transition: 0.75s;
}

.player:hover {
  box-shadow: 10px 10px 10px rgb(10, 10, 10);
}

.avatarTitle,
.name,
.username,
.permissions {
  width: 95%;
  margin-left: auto;
  margin-right: auto;
}

.name {
  word-wrap: break-word;
  margin-bottom: 0;
}

.searchOptions-clickable h2 {
  user-select: none;
}

.searchOptions-clickable {
  color: white;
}

.searchOptions-clickable:hover {
  cursor: pointer;
  color: rgb(200, 200, 200);
}

.collapsable a.collapsed h2:after {
  content: " ▾";
}
.collapsable a:not(.collapsed) h2:after {
  content: " ▴";
}
.collapsable a:not(.collapsed) + div {
  display: none;
}

#sortOrder {
  margin-bottom: 1.75em;
}

.username {
  word-wrap: break-word;
  color: grey;
  font-size: 0.75rem;
  margin-top: 0.25em;
  margin-bottom: 0;
}

.permissions {
  color: white;
  font-size: 0.688rem;
  margin-top: 0.25em;
}

.info {
  width: 90%;
  margin-left: auto;
  margin-right: auto;
}

button {
  border: none;
  text-decoration: none;
  background-color: rgb(32, 77, 197);
  padding: 5px 15px 5px 15px;
  border-radius: 7.5px;
  color: white;

  transition: 0.65s;
}

button:hover {
  cursor: pointer;
  background-color: rgb(0, 45, 255);
}

.tippy-box[data-animation="scale"][data-placement^="top"] {
  transform-origin: bottom;
}
.tippy-box[data-animation="scale"][data-placement^="bottom"] {
  transform-origin: top;
}
.tippy-box[data-animation="scale"][data-placement^="left"] {
  transform-origin: right;
}
.tippy-box[data-animation="scale"][data-placement^="right"] {
  transform-origin: left;
}
.tippy-box[data-animation="scale"][data-state="hidden"] {
  transform: scale(0.5);
  opacity: 0;
}

/* Permissions */

.permission-guest {
  color: #808080;
}

.permission-operator {
  color: #fa8072;
}

.permission-owner {
  color: #ffbf00;
}

